--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 /** FIN ESTILOS GLOBALES **/
 
-@media screen and (max-width: 750px) {
+@media all and (max-width: 900px) {
 
      #navegador, menu {
         display: none;
@@ -140,7 +140,7 @@ body {
         display: none;
       }
       
-      @media screen and (min-width: 768px) {
+      @media only and (min-width: 900px) {
         .button-menu {
           display: none;
         }
@@ -174,7 +174,7 @@ body {
 }
    
 
-@media screen and (min-width: 750px) {
+@media only screen and (min-width: 900px) {
     .main-nav {
         display: none;
     }
