--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-@font-face {
-    src: url('../fonts/oswald-v49-latin-regular.eot?#iefix') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../fonts/oswald-v49-latin-regular.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../fonts/oswald-v49-latin-regular.woff') format('woff'),
-        /* Modern Browsers */
-        url('../fonts/oswald-v49-latin-regular.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../fonts/oswald-v49-latin-regular.svg#Oswald') format('svg');
-    /* Legacy iOS */
-
-    font-family: 'Courier New', Courier, monospace;
-}
 
 
 
@@ -25,8 +11,13 @@
 
 body {
     background-color: rgb(0, 0, 0);
-    font-family: 'oswald', 'regular', sans-serif;
+    font-family: 'Calibri', 'regular', sans-serif;
     font-style: normal;
+    
+}
+
+h2 {
+   font-size: calc(30px + 0.390625vw);
 }
 
 /** FIN ESTILOS GLOBALES **/
@@ -475,7 +466,7 @@ img.btn-whatsapp:hover {
 }
 
 .nietos {
-    font-size: 2vw;
+    font-size: 4px + 2vw;
     background: #000000;
     color: white;
     font-style: oblique;
@@ -581,32 +572,38 @@ img.btn-whatsapp:hover {
     border-radius: 10px;
     width: 95%;
 }
-
-.grid {
-    margin: 0 auto;
-    display: grid;
-    width: 98%;
-    margin-top: 4vw;
-    grid-template-columns: repeat(auto-fill, 14em);
-    gap: 10px;
-    justify-content: center;
-}
-
 .textoeventos h2 {
 
     font-size: calc(16px + 1vh);
 }
+.grid {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 98%;
+    margin-top: 4vw;
+    justify-content: center;
+    list-style: none;
+    color: antiquewhite;
+}
 
-.grid img {
+.fotogaleria {
+    margin-top: 4vw ;
+    
+    
+}
+
+
+
+.fotogaleria img {
     border-radius: 10px;
-    padding: 0.1vw;
     background-color: #0c3414;
     width: 100%;
-    height: 80%;
+    
 }
 
 .grid img:hover {
-    transform: scale(2);
+    
     transition: 1s;
     border-radius: 20px !important;
     -webkit-box-shadow: 0px 0px 15px 0px rgba(7, 94, 84, 1);
