--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 body {
     background-color: rgb(0, 0, 0);
     font-family: 'Calibri', 'regular', sans-serif;
-    font-style: normal;
-    
+    font-style: normal;   
+    color: aliceblue;
 }
 
 h2 {
@@ -613,24 +613,26 @@ img.btn-whatsapp:hover {
 
 }
 
-.gridvideos {
+.gridvideos li {
     width: 98%;
     margin: 0 auto;
     margin-top: 4vw;
     display: flex;
+    flex-direction: column;
     border-radius: 10px;
-    flex-wrap: wrap;
     justify-content: center;
-    justify-content: space-around;
+    text-align: center;
 
 }
 
 .videoyoutube iframe {
+    
     width: 100%;
     height: 500px;
 }
 
 .videoyoutube {
+
     width: 70vh;
     border-radius: 10px;
 }
