--- a/style.css
+++ b/style.css
@@ -686,6 +686,10 @@ img.btn-whatsapp:hover {
 
 }
 
+.recorrido360 {
+    text-align: center;
+}
+
 .paginafotos IMG:hover {
     
     position: relative;
