--- a/style.css
+++ b/style.css
@@ -127,6 +127,18 @@ h2 {
         display: none;
       }
       
+      .social {
+        position: fixed;
+        right: 0;
+        top: 0 ;
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        z-index: 3000;
+        list-style: none;
+
+}
       @media all and (min-width: 900px) 
       {
         .button-menu {
@@ -175,7 +187,18 @@ h2 {
         left: 0;
         z-index: 49999;
     }
-
+    .social {
+        position: fixed;
+        right: 0;
+        top: 7vw ;
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        z-index: 3000;
+        list-style: none;
+    
+    }
 
     .menu {
         position: relative;
@@ -359,56 +382,6 @@ img.btn-whatsapp:hover {
     font-style: inherit;
 }
 
-.social {
-    position: fixed;
-    right: 0;
-    top: 15% ;
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    z-index: 3000;
-    list-style: none;
-
-}
-
-.icon {
-    color: white;
-    text-decoration: none;
-    padding: .7rem;
-    display: flex;
-    transition: all .5s;
-
-}
-.icon-instagram {
-    background-color: #3f729b;
-}
-.icon-facebook2 {background: #2e406e;
-
-}
-
-.icon-whatsapp {
-  background:   #25d366;
-
-}
-.icon:first-child{
-    border-radius:  1rem 0 0 0 ;
-
-}
-.icon:last-child{
-    border-radius:  0 0 0 1rem;
-
-}
-
-.icon-facebook2:before {
-    content: "\ea91";
-  }
-.icon:hover{
-    padding-right: 3rem;
-    border-radius: 1rem 0 0 1 rem;
-    box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.42);
-
-}
 
 .email {
     margin-top: 50px;
@@ -592,6 +565,45 @@ img.btn-whatsapp:hover {
     flex-wrap: wrap;
     gap: 1em;
 }
+
+
+
+.icon {
+    color: white;
+    text-decoration: none;
+    padding: .7rem;
+    display: flex;
+    transition: all .5s;
+
+}
+.icon-instagram {
+    background-color: #3f729b;
+}
+.icon-facebook2 {background: #2e406e;
+
+}
+
+.icon-whatsapp {
+  background:   #25d366;
+
+}
+.icon:first-child{
+    border-radius:  1rem 0 0 0 ;
+
+}
+.icon:last-child{
+    border-radius:  0 0 0 1rem;
+
+}
+
+
+.icon:hover{
+    padding-right: 3rem;
+    border-radius: 1rem 0 0 1 rem;
+    box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.42);
+
+}
+
 
 /** si la pantalla es de 768px o menos poner los elementos de site main en una columna **/
 @media screen and (max-width: 768px) {
