--- a/style.css
+++ b/style.css
@@ -417,6 +417,8 @@ img.btn-whatsapp:hover {
 }
 .campo {
     margin: .5em 0;
+    display: flex;
+    flex-direction: column;
 }
 .campo input,
 .campo textarea {
