--- a/style.css
+++ b/style.css
@@ -724,6 +724,8 @@ img.btn-whatsapp:hover {
 }
 
 .fotogaleria img {
+    margin: 0  auto;
+    width: 100%;
     border-radius: 10px;
     background-color: var(--verde); 
 }
