--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ h2 {
    font-size: calc(30px + 0.390625vw);
 }
 
+img {
+    max-width: 100%;
+  }
 
 
 /** FIN ESTILOS GLOBALES **/
@@ -493,11 +496,10 @@ img.btn-whatsapp:hover {
     font-size: calc(10px + 1vw);
     color: #ffffff;
     background: #680c0c;
-    
 }
 
 .titulo h1 {
-    font-size: 10 + 1vw;
+    font-size: 10 + 1vw;  
 }
 
 
@@ -705,7 +707,7 @@ img.btn-whatsapp:hover {
 
 @media screen and (min-width: 800px)
 {
-.fotogaleria {
+.fotogaleria  {
     max-width: 30%;
 }
 
@@ -726,6 +728,7 @@ img.btn-whatsapp:hover {
 .fotogaleria img {
     margin: 0  auto;
     width: 100%;
+    height: auto;
     border-radius: 10px;
     background-color: var(--verde); 
 }
