--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@
     padding: 0;
 }
 
+html { scroll-behavior: smooth; }
+
+html, body { 
+    scroll-behavior: smooth
+  }
+
 body {
     background-color: rgb(0, 0, 0);
     font-family: 'Calibri', 'regular', sans-serif;
     font-style: normal;   
     color: aliceblue;
+    
 }
 a {
     text-decoration: none;
@@ -692,6 +699,36 @@ img.btn-whatsapp:hover {
     align-items: center;
 }
 
+.footer {
+   
+}
+
+.fb-container {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+
+#fb-scroll {
+    scroll-behavior: smooth; 
+}
+
+.fb-page {
+    border-color:  #0c3414;
+    border-width: 10px;
+    border-style: solid;
+}
+.footer__text {
+    margin-top: 4vw;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   justify-content: space-around;
+}
+
 .grid img {
     max-width: 300px;
     height: 100%;
@@ -743,14 +780,6 @@ img.btn-whatsapp:hover {
     font-size: 1.5rem;
 }
 
-.footer__text {
-    margin-top: 4vw;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   justify-content: space-around;
-}
 .grid img:hover {
     
     transition: 1s;
