--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+ 
 }
 
 html { scroll-behavior: smooth; }
 
 html, body { 
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
   }
 
 body {
@@ -152,6 +154,10 @@ img {
         display: none;
       }
       
+      .TA_excellent img {
+        width: 50%;
+
+      }
       .social {
         position: fixed;
         right: 0;
@@ -699,26 +705,20 @@ img.btn-whatsapp:hover {
     align-items: center;
 }
 
-.footer {
-   
-}
+
 
 .fb-container {
     margin-top: 1rem;
     display: flex;
-    justify-content: center;
-    
-    
-}
-
-#fb-scroll {
-    scroll-behavior: smooth; 
+    justify-content: center; 
 }
 
 .fb-page {
     border-color:  #0c3414;
     border-width: 10px;
     border-style: solid;
+    width: fit-content;
+    
 }
 .footer__text {
     margin-top: 4vw;
