--- a/style.css
+++ b/style.css
@@ -539,6 +539,7 @@ img.btn-whatsapp:hover {
     border-radius: 50px;
 }
 
+
 .sabato {
     border-radius: 10px;
 }
@@ -668,6 +669,19 @@ img.btn-whatsapp:hover {
     .site-main {
         flex-direction: column;
     }
+
+    .aA7pSI1 {
+        position: fixed;
+        top: 0;
+        right: 0;
+        background-color: #ffffff;
+    } 
+    .TA_excellent img {
+        width: 35%;
+        margin-left: px;
+    
+      }
+    
 }
 
 .main-child {
