--- a/style.css
+++ b/style.css
@@ -363,28 +363,22 @@ img.btn-whatsapp:hover {
     border-radius: 10px;
 }
 
-.comollegar {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 10px;
-    margin-top: 2vw;
-    margin-left: -28%;
-    width: 120%;
-    background-color: #0c3414;
-}
 
 
 .mapa {
     margin: auto 0;
     position: relative;
     justify-content: center;
+    background-color: #0c3414;
+    border-radius: 30%;
 }
 
 .textomapa {
     margin: 0 auto;
     padding: 2vw;
+    background-color: #0c3414;
+    border-radius: 10px;
 }
 
 .mapa {
